fixed missing background and logo

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 body {
-  background-image: url(http://nextdoortothemoon.com/wp-content/themes/nextdoor/images/dark_wall.png);
+  background-image: url(http://i.imgur.com/vEtgs6R.png);
   background-repeat: repeat;
   color: white;
   font-family: 'Open Sans', sans-serif;
